[project]
name = "Comfyui-OpenAI-API"
description = ""
version = "1.1.1"
license = {file = "LICENSE"} 
 classifiers = [
     # For OS-independent nodes (works on all operating systems)
     "Operating System :: OS Independent",
 ]

dependencies = ["numpy>=1.24.0", "Pillow>=10.0.0", "typing>=3.7.4", "openai>=2.1.0"]

[project.urls]
Repository = "https://github.com/gaborm74/ComfyUI-OpenAI-API"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/gaborm74/ComfyUI-OpenAI-API/wiki"
"Bug Tracker" = "https://github.com/gaborm74/ComfyUI-OpenAI-API/issues"
"Upstream" = "https://github.com/bgreene2/ComfyUI-OpenAI-API"

[tool.comfy]
PublisherId = "bgreene2"
DisplayName = "ComfyUI-OpenAI-API (gaborm74 fork)"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

